# rgbpp

./: Cargo.toml  Makefile  README.md  checksums.txt
.github/workflows/: rust.yaml
audits/: README.md
contracts/btc-time-lock/: Cargo.toml  README.md
contracts/btc-time-lock/src/: main.rs
contracts/rgbpp-lock/: Cargo.toml  README.md
contracts/rgbpp-lock/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: bitcoin.rs  error.rs  lib.rs  rgbpp.rs  utils.rs
crates/core/src/bitcoin/: encoder.rs  mod.rs  parser.rs  types.rs  utils.rs
crates/core/src/on_chain/: bitcoin_light_client.rs  mod.rs  utils.rs
crates/core/src/schemas/: conversion.rs  mod.rs  rgbpp.rs
crates/deploy-tool/: Cargo.toml
crates/deploy-tool/src/: main.rs
deployment/: README.md
deployment/deployment-configs/: btc-time-lock.toml  rgbpp-lock.toml
schemas/: rgbpp.mol
tests/: Cargo.toml
tests/src/: btc_mock.rs  lib.rs  rgbpp.rs  tests.rs  utils.rs
