[package]
name = "rgbpp-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
molecule = { version = "0.7.5", default-features = false }
ckb-gen-types = { version = "0.112.0", default-features = false }
