[package]
name = "rgbpp-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
molecule = { version = "0.7.5", default-features = false }
ckb-gen-types = { version = "0.112.0", default-features = false }
sha2 = { version = "0.11.0-pre.3", default-features = false }
ckb-std = "0.15.1"
ckb-bitcoin-spv-verifier = { git = "https://github.com/ckb-cell/ckb-bitcoin-spv.git", rev = "8789a5d89d97fb034d873fd6dc331276c742e6a1", default-features = false, features = [
  "no-std",
] }
